--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div class="row justify-content-cneter">
         <div class="col-md-6">
             <div class="card shadow-lg">
-                <img src="" class="card-img-top" alt="collegeImage">
+                <img src="../static/img/campus1-1024x682.webp" class="card-img-top" alt="collegeImage">
                 <div class="card-body">
                     <h5 class="card-title">Manhitha Institute of technology</h5>
                     <p class="class-text">
