--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -17,11 +17,11 @@
         </div>
         <div class="mb-3">
             <label>Email:</label>
-            <input type="text" name="name" class="form-control" required>
+            <input type="email" name="email" class="form-control" required>
         </div>
         <div class="mb-3">
             <label>Comments:</label>
-            <input type="text" name="name" class="form-control" required>
+            <input type="comment" name="comment" class="form-control" required>
         </div>
         <button type="submit" class="'btn btn-success">Submit</button>
     </form>
